--- a/relax and breathe/relax.css
+++ b/relax and breathe/relax.css
@@ -22,12 +22,13 @@ h1{
     margin-top: 0.9rem;
     /* color: white; */
     color: rgb(239, 230, 230);
+    font-size: 2.7rem;
    
     
 }
 
 h2{
-    font-size: large;
+    font-size: xx-large;
 }
 
 video{
@@ -57,9 +58,9 @@ video{
     
 }
 
-.box p{
-    width: 41%;
-    font-size: 9px;
+ p{
+    width: 67%;
+    font-size: 13px;
     margin-top: 0.5rem;
 }
 .right{
