--- a/relax and breathe/deep breathing/header.css
+++ b/relax and breathe/deep breathing/header.css
@@ -24,14 +24,17 @@ body {
 
 
 nav {
-  position: fixed;
-  isolation: isolate;
-  top: 0;
-  width: 100%;
-  max-width: var(--max-width);
-  margin: auto;
-  z-index: 9;
-  background-color: #30373a;
+  nav {
+    position: fixed;
+    isolation: isolate;
+    top: 0;
+    width: 100%;
+    /* max-width: var(--max-width); */
+    /* margin: auto; */
+    z-index: 9;
+    background-color: #30373a;
+}
+
   
 }
 
@@ -207,7 +210,7 @@ nav {
 
 @media (width > 768px) {
   nav {
-    padding: 0.5rem 1rem;
+    padding: 1.3rem 1rem;
     position: static;
     display: flex;
     align-items: center;
@@ -264,5 +267,5 @@ nav {
   --primary-color: #e2be0a;
   --text-dark: #0f172a;
   --white: #ffffff;
-  --max-width: 1200px;
+  /* --max-width: 1200px; */
 }
