--- a/relax and breathe/relax.css
+++ b/relax and breathe/relax.css
@@ -12,6 +12,50 @@ html,body{
     position: relative;
 }
 
+
+.hello{
+    background-color: #101b20;
+    color: white;
+    font-family: "Poppins", sans-serif;
+    font-size: 20.5px;
+    padding: 1rem 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .hello a{
+    padding: 0px 5px ;
+    color: white;
+    
+    border-radius: 5px;
+    text-decoration: none;
+  }
+  
+  .fa-solid{
+    margin-right: 0.4rem;
+   text-align: center;
+    font-size: large;
+    
+  }
+  
+  .fa-brands{
+    margin-right: 0.4rem;
+   text-align: center;
+    font-size: large;
+  }
+  
+  .hello a:hover{
+    background-color: #FD9E5C;
+    color: #0E1E25;
+  }
+  
+  
+  
+  
+  
+
+
 a{
     text-decoration: none;
     display: inline-block;
