--- a/relax and breathe/meditate/style.css
+++ b/relax and breathe/meditate/style.css
@@ -15,6 +15,8 @@
   align-items: center;
 }
 
+img{}
+
 .hello a{
   padding: 0px 5px ;
   color: white;
@@ -117,9 +119,10 @@
 }
 .time-display {
   color: white;
-  position: absolute;
+  /* position: absolute; */
   font-size: 50px;
-  bottom: 10%;
+  /* bottom: 10%; */
+  margin-top: 114px;
 }
 
 video {
