--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,20 @@
   overflow-y: hidden;
 }
 
+.fa-solid{
+  margin-right: 0.4rem;
+ text-align: center;
+  font-size: large;
+  
+}
+
+.fa-brands{
+  margin-right: 0.4rem;
+ text-align: center;
+  font-size: large;
+}
+
+
 a {
   text-decoration: none;
 }
